adding pure unshared intention

--- a/counterexample to bratman on shared intention/a counterexample to bratman on shared intention.tex
+++ b/counterexample to bratman on shared intention/a counterexample to bratman on shared intention.tex
@@ -16,6 +16,8 @@
 %\author{}
 %\date{}
 
+
+
 %\setromanfont[Mapping=tex-text]{Sabon LT Std} 
 
 \begin{document}
@@ -38,13 +40,17 @@
 Why, if at all, is a notion of shared intention needed? 
 This question is standardly answered by appeal to contrast cases \citep[compare][p.\ 150]{Bratman:2009lv}.
 Thus \citet{gilbert_walking_1990} contrasts our intentionally walking together with two people who happen to be walking side by side. 
-The two pairs' movements may be the same and similarly coordinated (to avoid collision), so intentionally walking together cannot be only a matter of how we move our bodies or how our movements are coordinated. 
-Also, in both cases each individual's walking is intentional, so our intentionally walking together cannot be a matter only of our each intentionally walking.%
+And \citet{Searle:1990em} contrasts park visitors who  simultaneously run to a central shelter in performing a dance with park visitors who likewise run to the central shelter but only because of an impending storm. 
+These and other contrast cases invite the question, 
+How does our intentionally acting together differ from our merely acting in parallel? 
+The first contrast case, Gilbert's, shows that the difference can’t be just  a matter of coordination because people who are merely happen to be walking side by side each other also need to coordinate their actions in order to avoid colliding.  
+Note also that in both cases each individual's walking is intentional, so our intentionally walking together cannot be a matter only of our each intentionally walking.
+The second contrast case, Searle's, shows that the difference can’t just be that the resulting actions have a common effect because merely parallel actions can have common effects too.%
 \footnote{
-Compare \citet{Pears:1971fk} who uses contrast cases to argue that whether something is an ordinary, individual action depends on its antecedents. 
-}  
-Perhaps, then, a notion of shared intention is needed to distinguish the two cases.
-It is our acting on a shared intention that we walk together which distinguishes us from two strangers who happen to be walking side by side.%
+This use of contrast cases resembles \citet{Pears:1971fk}: he uses contrast cases to argue that whether something is an ordinary, individual action depends on its antecedents. 
+} 
+Perhaps, then, a notion of shared intention is needed to distinguish the two cases.  
+Perhaps it is our acting on a shared intention that we walk together which distinguishes us from two strangers who happen to be walking side by side.%
 \footnote{
 Many philosophers agree that a notion of shared intention is useful for understanding acting together. 
 Compare \citet[p.\ 5]{Gilbert:2006wr}: `I take a collective action to involve a collective intention.'  See also  
@@ -86,19 +92,21 @@ Rather the above  conditions, (1)--(3), must be sufficient for shared intention 
  	where an  act-type is \emph{cooperatively neutral} just if `joint performance of an act of that type may be cooperative, but it need not be' \citep[p.\ 330]{Bratman:1992mi}. 
 }
 
-A consequence is that, in the right situations, one of us can rationally intend that we J unilaterally, that is without anyone else having this intention. 
-If you know that I am going to Chicago via a certain route at a particular time
-and if you can rationally intend that you go to Chicago in the same manner,
-then you can rationally intend that we go to Chicago together---providing, of course, that you intend our going to Chicago together in a way that is neutral with respect to shared intentionality.
+A consequence is that, in the right situations, one of us can rationally intend that we J, and can intend this unilaterally, that is without depending on anyone else intending that we J. 
+Suppose you know that I am going to Chicago via a certain route at a particular time, 
+and that I will do this regardless of what you do.
+Suppose also that you can rationally intend that you go to Chicago in the same manner.
+Then you can rationally intend that we go to Chicago together, 
+	and you can intend this irrespective of whether I have any corresponding intention---providing, of course, that in so intending you are conceiving of our going to Chicago together in a way that is neutral with respect to shared intentionality.
 What follows depends on the premise that this is indeed possible.%
 \footnote{ 
 \citet{Bratman:1999fr}  defends this claim at length. 
-Note also that a primary application of his account of shared intention depends on its truth.
+Note also that this claim must be true if Bratman's account of shared intention is to provide an informative way of distinguishing between the contrast cases mentioned at the start.
 }
 
 
 In this paper we give a counterexample to Bratman's  claim that the above conditions, (1)--(3), are collectively sufficient conditions for shared intention. 
-We will also suggest a revision which would enable the counterexample to be avoided.
+We shall also suggest a revision which would enable the counterexample to be avoided.
 Apart from improving our understanding of what shared intention is, 
 this will also bear on the kinds of planning that are involved in acting together.
 
@@ -109,65 +117,177 @@ One of Bratman's aims is to show that it is possible to give an account of share
 Achieving this aim would require the strong claim, and it is to the strong claim that our counterexample is directed. 
 
 
-\section{Background: Cooperatively Neutral Act-types}
-When Elisabeth and her daughters go to the park together, 
-	they usually do so cooperatively 
-	but sometimes she is coerced by threats and tantrums.  
-(Bratman's example is going to Chicago `in the mafia sense', but we are  more familiar with domestic coercion.)
-Observing them one day, we might 
-	know that Elisabeth and her daughters are going to the park together 
-	without knowing whether this particular trip is cooperative or coercive.
-So we can think of this action in a way that is cooperatively neutral.
-In general an act-type is \emph{cooperatively neutral} just if `joint performance of an act of that type may be cooperative, but it need not be' \citep[p.\ 330]{Bratman:1992mi}. 
 
-What an agent intends when then she intends that we J in the first of Bratman's sufficient conditions, (1), can be a cooperatively neutral act type. 
-Bratman allows for this possibility in order to avoid potentially circular appeal to shared intention in specifying what we intend when we intend that we J.
+
+\section{Unshared Intentions}
+Before we can introduce the counterexample we need to introduce what we shall call `unshared intentions'.
+We have an \emph{unshared intention} that we <J$_1$, J$_2$> where J$_1$$\neq$J$_2$ just if:
+%
+\begin{quote}
+\label{df:unshared_intention}
+1. (a) I intend that we J$_1$ and (b) you intend that we J$_2$
+ 
+2. I intend that we J$_1$ in accordance with and because of la, lb, and meshing subplans of la and lb; you intend that we J$_2$ in accordance with and because of la, lb, and meshing subplans of la and lb
+ 
+3. 1 and 2 are common knowledge between us.
+\end{quote}
+In defining unshared intention we have used conditions exactly like Bratman's sufficient conditions for shared intention except that Bratman's conditions have J$_1$$=$J$_2$.
+At this point it might be natural for readers to suppose that agents could not have unshared intentions,
+or at least that they could not do so without irrationality.
+In this section we describe a possible situation in which two agents  have an unshared intention without irrationality, deception or even ignorance.
+
+
+Let us first introduce the activity we shall focus on.
+Ayesha and Benji  are playing a simple video game which involves moving a cross around a two-dimensional space littered with barriers.
+Ayesha can only accelerate the cross backwards or forwards,
+while Benji can only accelerate it left or right. 
+The cross moves around and interacts with the barriers in ways both players can predict.
+The players are given tasks independently. 
+These tasks always involve making the cross hit a target within two minutes of starting. 
+A player succeeds when the cross hits her target, regardless of what happens to the cross afterwards.  
+(It may go on to hit another target.)
+In this case, 
+	Ayesha's task is to make the cross hit the red square
+	while
+	Benji's task is make the cross hit the blue circle. 
+In general it is possible that either or both will succeed, or that they will both fail.
+Each movement carries a small cost to the player who moves, so that Ayesha and Benji each attempt to minimize how much he or she moves the cross consistently with completing his or her task.
+Ayesha and Benji are each neutral on whether the other succeeds or fails.
+They are not opponents and do not seek to undermine each other's efforts, but each is entirely concerned  with his or her own task.
+All of this is common knowledge for Ayesha and Benji.
+They both know who has which task, what constraints they face and what their motives are.
+
+Consider the possibility of one player intending, unilaterally, that the two players do something.
+Suppose that one of the players---Ayesha, say---can knowledgeably predict that if she performs a certain sequence actions, <a$_1$, a$_2$, ...\ a$_n$>, then Benji will simultaneously perform certain other actions, <b$_1$, b$_2$, ...\ b$_n$>,
+ and the upshot will be that the cross hits the red square.
+Were this to happen, we could say, truthfully, that Ayesha and Benji made the cross hit the red square.
+Suppose, further, that Ayesha can intend to perform those actions <a$_1$, a$_2$, ...\ a$_n$>.
+Then Ayesha can intend, unilaterally, that they, Ayesha and Benji, make the cross hit the red square.
+
+Unshared intentions require a kind of symmetry.
+Let us suppose that the above sequences of actions,
+	Ayesha's <a$_1$, a$_2$, ...\ a$_n$>  and 
+	Benji's <b$_1$, b$_2$, ...\ b$_n$>,
+will also result in the cross hitting the blue circle. 
+(Since the cross has momentum, we can suppose that it will hit both the red square and the blue circle at some time after these actions are performed.)
+Then by the reasoning just offered, Benji could intend that they, Ayesha and Benji make the cross hit the blue circle.
+So Ayesha and Benji could meet the first condition, (1), for having an unshared intention.
+
+What about the second condition, (2)?
+Suppose that Ayesha knows two further things.
+First, that Benji intends that they, Ayesha and Benji, make the cross hit the blue circle.
+Second, that in acting on his intention Benji will perform actions <b$_1$, b$_2$, ...\ b$_n$>.
+Then Ayesha can intend that they, Ayesha and Benji, make the cross hit the red square in accordance with and because of her intention that they make the cross hit the red square and in accordance with and because of Benji's intention that they make the cross hit the blue circle.
+
+This is not quite enough to meet the second condition, (2), because there is also a requirement about meshing subplans. 
+To make sense of this requirement we need to generalise Bratman's definition of meshing:
+\begin{quote}
+`our individual subplans concerning our J-ing \emph{mesh} just in case there is some way we could J that would not violate either of our subplans but would, rather, involve the successful execution of those subplans' \citep[p.\ 106]{Bratman:1993je}.
+\end{quote}
+A natural generalisation is this:
+\begin{quote}
+our individual subplans concerning our <J$_1$, J$_2$>-ing \emph{mesh} just in case there is some way we could <J$_1$, J$_2$> that would not violate either of our subplans but would, rather, involve the successful execution of those subplans. 
+\end{quote}
+%
+To illustrate, 
+there would be a failure to mesh if, in intending that they make the cross hit the red square,  Ayesha's plans had included pushing Benji out of the way and seizing his controls. 
+But in the case we have been describing there is no such failure to mesh.
+Each agent's subplans involve manipulating his or her own controls,
+and the successes each seeks in doing this depends on the other successfully carrying out their subplans.
+So Ayesha can rationally intend that they, Ayesha and Benji, make the cross hit the red square in accordance with and because of their intentions and meshing subplans of them.
+And Benji likewise for making the cross hit the blue circle.
+
+The only outstanding requirement for Ayesha and Benji to have an unshared intention is that their various intentions are common knowledge. 
+Assuming common knowledge is possible where agents have a shared intention, it is likewise possible in this case of unshared intention.
+So Ayesha and Benji can have an unshared intention that they <J$_1$, J$_2$> where J$_1$ is Ayesha and Benji's making the cross hit the red square and J$_2$ is their making the cross hit the blue circle.
+
+So far we have shown that it is possible for two agents to have an unshared intention without irrationality, deception or ignorance.
+Of course unshared intentions may be rare. 
+But what matters for our counterexample is just that they are possible. 
+
+
+
+\section{Pure unshared intentions}
+An unshared intention is \emph{pure} if having that unshared intention does not involve having any shared intention. 
+It may initially appear obvious that all unshared intentions are pure. 
+This is less obvious than it seems, however.
+Since Bratman provides only sufficient conditions for shared intention, his account doesn't tell us that the unshared intention is not a shared intention.
+For all Bratman says, the conditions defining unshared intention might also be collectively sufficient conditions for shared intention. 
+And while we might be tempted to assume that for two agents to intentionally J together they must at least each have intentions concerning J, 
+this assumption might reasonably be rejected by those who, like Bratman, reject the Simple View according to which when an individual intentionally J-s she has an intention concerning her J-ing \citep{Bratman:1984jr}.
+So the purity of an unshared intention cannot be assumed without argument.
+
+How could we establish the purity of a particular unshared intention? 
+For reasons that will become clear later, we need to show that  Ayesha and Benji's unshared intention that they <J$_1$, J$_2$>  is pure.
+
+This question might initially appear frivolous but it is not straightforward to answer.
+Since Bratman provides only sufficient conditions for shared intention, his account doesn't tell us that the unshared intention is not a shared intention.
+And while we might be tempted to assume that for two agents to intentionally J together they must at least each have intentions concerning J, 
+this assumption might reasonably be rejected by those who, like Bratman, reject the Simple View according to which when an individual intentionally J-s she has an intention concerning her J-ing \citep{Bratman:1984jr}.
 
 
 
 
 \section{The Counterexample}
-Although it is simple, introducing the counterexample will involve several steps.
+*Need a beefier activity, something more than cooperatively neutral.
 
-Ayesha and Benji  are playing a simple video game which involves moving a cross around a two-dimensional space littered with barriers.
-Ayesha can only move the cross backwards or forwards,
-while Benji can only move it left or right.
-Ayesha and Benji are given tasks independently. 
-These tasks always involve making the cross touch a target within 100 seconds of starting. 
-A player succeeds when the cross touches her target, regardless of what happens to the cross afterwards.  
-(It does not have to stay touching the target.)
-For example, 
-	Ayesha's task might be to make the cross touch the red square
-	while
-	Benji's task might be to make the cross touch the blue circle. 
-It is possible that either or both succeed, or that they both fail.
-Ayesha and Benji always have common knowledge of the tasks they are assigned.
-Each movement carries a small cost to the player who moves, so that Ayesha and Benji each attempt to minimize how much he or she moves the cross consistently with completing his or her task.
-Ayesha and Benji are each neutral on whether the other succeeds or fails.
-They are not opponents and do not seek to undermine each other's efforts, but each is entirely concerned  with his or her own task.
+In the situation just described,
+Ayesha and Benji are playing a game and have different tasks.
+Thanks to special features of the game environment, they both succeed by acting on an unshared intention.
+Now compare two further players, Yasmin and Zak, who are playing the same game. 
+Their situations, knowledge states, intentions and actions are as similar as possible to Ayesha's and Benji's except for one detail.
+Just by chance they have been assigned identical tasks: Yasmin's task is to make the cross hit the red square and Zak's task is the same.
+So where Ayesha and Benji have an unshared intention that they <J$_1$, J$_2$>,
+Yasmin and Zak meet Bratman's conditions (1)--(3) for having a shared intention that they J$_1$.  
+But these intentions, the unshared intention and the Bratman intention (as we might call the structure of intention and knowledge), result in them performing same actions (Yasmin does what Ayesha does, Zak what Benji does) in the same way. 
+
+We shall argue that although Yasmin and Zak meet Bratman's conditions (1)--(3) for having a shared intention that they J$_1$, they do not have any such shared intention.
+This, then, is our counterexample.
+Of course it is probably not yet obvious that Yasmin and Zak do not have a shared intention.
+To see that they do not we need to introduce one more case.
+
+We started this paper by explaining the need for a notion of shared intention by appeal to contrast cases. 
+An account of shared intention should enable us to  distinguish systematically between two types of case in which we J together, one where we intentionally J together and the other where  our J-ing together involves  merely parallel actions.
+As noted, Gilbert's example of walking together shows that merely parallel actions can be mutually responsive, as when two strangers walking side by side avoid collision thanks to meshing subplans.
+
+
+
+*Yasmin and Zak: it's like we've tied the Gilbert's walking strangers' ankles together, so that they can only succeed together.
 
 
 
 
-In the previous round, 
-	Ayesha's task was to touch the red square
-	and
-	Benji's task was to touch the blue circle.
-As it happened, the red square and the blue circle were positioned such that it was impossible to touch one without touching the other, as Ayesha and Benji knew.
-Furthermore, Ayesha intended that they, Ayesha and Benji, move the cross to the red square; Benji intended that they, Ayesha and Benji, move the cross to the blue circle; and each intended that they do so in accordance with and because of these intention and meshing subplans of them; and this was all common knowledge between them.
-In this way, Ayesha and Benji almost met Bratman's conditions for shared intention.
-They would have met the conditions but for the fact that Ayesha intended that they J$_1$ whereas Benji intended that they J$_2$ where J$_1$ $\neq$ J$_2$.
 
-At first glance this combination of intentions may seem incoherent or irrational. 
-How could Ayesha rationally intend that they, Ayesha and Benji, J$_1$ knowing that Benji has no corresponding intention? 
-To see that this is possible, note that, on Bratman's view,
- the act types which are intended can be \emph{cooperatively neutral}, that is such that `joint performance of an act of that type may be cooperative, but it need not be' \citep[p.\ 330]{Bratman:1992mi}.
-(This enables Bratman to avoid circularity in specifying what a shared intention is.)  
-So Ayesha's knowledge that Benji intends that they J$_2$ together with her knowledge that their J$_2$-ing is sufficient for their J$_1$-ing makes it possible for her to intend, unilaterally, that they J$_1$.%
-\footnote{
-These issues are discussed at length in \citet{Bratman:1999fr}. 
-Note that Bratman's account requires that it be possible for Ayesha to intend, unilaterally, that they J$_1$.%
-}
+***
+
+
+Our argument is:
+\begin{enumerate}[label=\roman*]
+\item Yasmin and Zak have a shared intention that they J$_1$ only if Ayesha and Benji have a shared intention in virtue of having the 
+ unshared intention that they <J$_1$, J$_2$>.
+\item Ayesha and Benji's unshared intention that they <J$_1$, J$_2$> is a not shared intention.
+\end{enumerate}
+%
+Therefore:
+%
+\begin{enumerate}[resume,label=\roman*]
+\item Yasmin and Zak do not have a shared intention that they J$_1$.
+\end{enumerate}
+%
+In the rest of this section we defend the two premises, starting with the second, (ii).
+
+Could Ayesha and Benji's unshared intention that they <J$_1$, J$_2$> be a  shared intention?
+This question might initially appear frivolous but it is not straightforward to answer.
+Since Bratman provides only sufficient conditions for shared intention, his account doesn't tell us that the unshared intention is not a shared intention.
+And while we might be tempted to assume that for two agents to intentionally J together they must at least each have intentions concerning J, 
+this assumption might reasonably be rejected by those who, like Bratman, reject the Simple View according to which when an individual intentionally J-s she has an intention concerning her J-ing \citep{Bratman:1984jr}.
+
+In defence of the second premise, (ii), consider that shared intentions are suppose to play a certain functional role.
+Among other things, they are supposed to coordinate 
+
+
+
+
 
 
 
@@ -220,5 +340,7 @@ The contrast cases do not provide a firm anchor for theorising about shared inte
 
 
 \bibliography{$HOME/endnote/phd_biblio}
+
+
 
 \end{document}
