--- a/counterexample to bratman on shared intention/a counterexample to bratman on shared intention.tex
+++ b/counterexample to bratman on shared intention/a counterexample to bratman on shared intention.tex
@@ -207,29 +207,53 @@ But what matters for our counterexample is just that they are possible.
 
 
 
-\section{Pure unshared intentions}
+\section{Pure unshared intentions and imaginary agents [*cut?]}
 An unshared intention is \emph{pure} if having that unshared intention does not involve having any shared intention. 
 It may initially appear obvious that all unshared intentions are pure. 
-This is less obvious than it seems, however.
+This is not obvious, however.
 Since Bratman provides only sufficient conditions for shared intention, his account doesn't tell us that the unshared intention is not a shared intention.
 For all Bratman says, the conditions defining unshared intention might also be collectively sufficient conditions for shared intention. 
 And while we might be tempted to assume that for two agents to intentionally J together they must at least each have intentions concerning J, 
 this assumption might reasonably be rejected by those who, like Bratman, reject the Simple View according to which when an individual intentionally J-s she has an intention concerning her J-ing \citep{Bratman:1984jr}.
 So the purity of an unshared intention cannot be assumed without argument.
 
-How could we establish the purity of a particular unshared intention? 
-For reasons that will become clear later, we need to show that  Ayesha and Benji's unshared intention that they <J$_1$, J$_2$>  is pure.
+For reasons to be explained later, we need to show that  Ayesha and Benji's unshared intention that they <J$_1$, J$_2$>  is pure.
+How could we do this? 
+Ayesha sees Benji's actions as constraints on her own, or else as opportunities.
+She exploits Benji's intentions for her own ends.
+Of course the situation is reciprocal: Benji exploits Ayesha in equal measure.
+Each allows himself or herself to be exploited by the other because being exploited enables exploiting.
+The sort of shared agency that an account of shared intention is supposed to capture must involve more than this sort of reciprocal exploitation, where each agent sees the other's actions only as constraints or opportunities. 
+Intuitively shared agency must somehow involve greater unity.
+But how can this intuition support an argument?
 
-This question might initially appear frivolous but it is not straightforward to answer.
-Since Bratman provides only sufficient conditions for shared intention, his account doesn't tell us that the unshared intention is not a shared intention.
-And while we might be tempted to assume that for two agents to intentionally J together they must at least each have intentions concerning J, 
-this assumption might reasonably be rejected by those who, like Bratman, reject the Simple View according to which when an individual intentionally J-s she has an intention concerning her J-ing \citep{Bratman:1984jr}.
 
+
+We started this paper by explaining the need for a notion of shared intention by appeal to contrast cases (following Bratman). 
+It is contrast cases that are supposed give us a pre-theoretical handle on shared intention.
+So to show that Ayesha and Benji's unshared intention is pure, we need to construct a contrasting case.
+
+***Lily and Isabel, 
+	like many people, 
+ 	sometimes attribute intentions and other states to imaginary agents, and perform actions on their behalf. 
+In some cases this enables them to further their own real-world objectives (as in `Teddy wants to go to the park now').	
+Some of these imaginary agents are toys. 
+But some are imaginary aggregate agents. 
+Sometimes, that is, Lily and Isabel imagine that there is an agent distinct from either of them and such that all its parts are parts of them.
+They attribute intentions and other states to this agent, and act on its behalf.
+
+
+
+
+
+
+An account of shared intention should enable us to  distinguish systematically between two types of case in which we J together, one where we intentionally J together and the other where  our J-ing together involves  merely parallel actions.
+As noted, Gilbert's example of walking together shows that merely parallel actions can be mutually responsive, as when two strangers walking side by side avoid collision thanks to meshing subplans.
 
 
 
 \section{The Counterexample}
-*Need a beefier activity, something more than cooperatively neutral.
+%*Need a beefier activity, something more than cooperatively neutral.
 
 In the situation just described,
 Ayesha and Benji are playing a game and have different tasks.
@@ -239,7 +263,96 @@ Their situations, knowledge states, intentions and actions are as similar as pos
 Just by chance they have been assigned identical tasks: Yasmin's task is to make the cross hit the red square and Zak's task is the same.
 So where Ayesha and Benji have an unshared intention that they <J$_1$, J$_2$>,
 Yasmin and Zak meet Bratman's conditions (1)--(3) for having a shared intention that they J$_1$.  
-But these intentions, the unshared intention and the Bratman intention (as we might call the structure of intention and knowledge), result in them performing same actions (Yasmin does what Ayesha does, Zak what Benji does) in the same way. 
+But these intentions, the unshared intention and the Bratman intention (as we might label the structure of intention and knowledge while leaving open whether it constitutes a shared intention), result in them performing same actions in the same way.
+That is, Yasmin reasons about Zak much as Ayesha reasons about Benji and Yasmin and does what Ayesha does, and likewise for Zak and Benji. 
+
+We shall argue that Yasmin and Zak do not have a shared intention that they J$_1$ despite meeting meet Bratman's conditions (1)--(3).
+This is probably not yet obvious, however.
+Let us first attempt to provide some intuitive support for this claim.
+Return to Ayesha and Benji for a moment.
+Ayesha sees Benji's actions as constraints to work around and opportunities to exploit.
+She exploits Benji's intentions for her own ends.
+Of course the situation is reciprocal: Benji exploits Ayesha in equal measure.
+Each allows himself or herself to be exploited by the other because being exploited enables exploiting.
+The sort of shared agency that an account of shared intention is supposed to capture must involve more than this sort of reciprocal exploitation, where each agent merely exploits the other's intentions. 
+But Yasmin and Zak are engaged in just the same sort of reciprocal exploitation as Ayesha and Benji.
+The only difference is that, quite by chance, Yasmin's task and Zak's task are the same.
+So, intuitively, Yasmin and Zak, like Ayesha and Benji, belong in the same category as two people who happen to be walking side by side and not in the category exemplified by two people intentionally walking together.
+
+Assuming for a moment that this is right,
+what might explain the difference between Yasmin and Zak on the one hand and cases like Gilbert's two people intentionally walking together on the other hand?
+To answer this question in the spirit of Bratman's planning-theoretic approach, we need to step back and think about planning generally.
+
+Imagine observing Ayesha and Benji as they play the game. 
+Suppose you decide to make a plan of action for one or both of them.
+In doing this you could either adopt one player's perspective or you could adopt a fictional shared perspective.
+Adopting one player's perspective, Ayesha's say, 
+	you think about what she might do to achieve her task,
+	predict how this will influence Benji's actions,
+	and then feed  these predictions back into the question of what Ayesha might do.
+From this perspective, Benji's actions are constraints to work around and opportunities to exploit.
+Alternatively you might adopt a fictional shared perspective, 
+	 mentally replacing Ayesha and Benji with a single, imaginary aggregate agent who has to perform both tasks alone.
+	 In this case, you think about what combination of actions would best achieve both tasks and then, right at the end, you assign these actions to Ayesha and Benji.
+From this perspective, it is as if there is a single mind behind the plan.
+
+Note that the number of agents involved does not dictate which perspective we can take.
+Just as we could take a fictional shared perspective where two or more agents are involved, 
+so also we could take a fictional split perspective on the actions of  a single agent, and even of ourselves.
+The newly elected  politician with a young family and working partner might see herself almost as if she were two people engaged in different projects while forced to shared a single body. 
+
+Shared perspective of a fictional aggregate agent.
+Can be a matter of negotiation what the fictional aggregate agent's values, preferences and intentions are.
+
+Perhaps the reason why Yasmin and Zak fail to have a shared intention (if they do---this has not yet been argued) is that each plans entirely from her own perspective. 
+Maybe shared intention sometimes requires that agents be disposed to plan at least some of their actions from a shared perspective.
+
+Now consider a third (and final) pair of players, Lily and Isabel.
+Lily and Isabel each take the appropriate shared perspective, as if imagining a fictional aggregate agent who had been assigned their two tasks, 
+and they plan accordingly.
+And this is common knowledge.
+What matters is not what they do, however.
+It is that the J which they intend is characterised in terms of planning from a shared perspective.
+What they intend when they intend that they J does not leave it open whether they will adopt a shared perspective in planning their J-ing.
+J is neutral with respect to shared intention but it is not neutral with respect to the requirement that each agent individually adopt a shared perspective when planning how to J.
+***HERE
+
+
+
+Imagine two tasks need to be completed; perhaps you need to buy some shoes and get a haircut. 
+Which actions you perform in attempting the first task constrains what actions you can perform in attempting the second task, and conversely.
+For instance, if you shop for the shoes in one store, you won't have enough money left for the best hairdressers.
+There are two ways to approach planning these tasks.
+One approach involves treating the two tasks as separate.
+Perhaps you first think of a plan that is optimal for buying shoes.
+Then, taking this plan as a constraint, you attempt to plan the haircut.
+But as it happens you discover that the options for the haircut are unsatisfactory.
+So you revise the shoe-buying plan and try again to plan the haircut.
+A different approach to planning would be to treat the two tasks as part of a larger, single task.
+Perhaps you identify several possible combinations of shoe-buying and haircut-getting actions.
+You then ask yourself which combination is best overall and then perform the component actions.
+
+
+
+
+Take a situation like the game Ayesha and Benji are playing but now imagine that you are taking over from both players and intend to perform both tasks. 
+One way to plan would involve thinking of two separate tasks.
+First you think about the best way to make the cross hit the red square.
+
+
+
+%
+%The difference separating Ayesha and Benji, on the one hand, from Yasmin and Zak on the other 
+%	is unlike the difference separating two strangers who merely happen to be walking side by side from two people intentionally walking together.
+%So if Ayesha and Benji's do not intentionally act together, then nor do Yasmin and Zak.
+
+
+ 
+
+***Can get a parallel to the special case discussed here by considering walkers whose legs have been tied together in such a way that they are forced to accommodate each other if they are to get around.  Such people may walk together and meet the Bratman conditions without actually 
+
+
+
 
 We shall argue that although Yasmin and Zak meet Bratman's conditions (1)--(3) for having a shared intention that they J$_1$, they do not have any such shared intention.
 This, then, is our counterexample.
